Fix the non-persistent ARGs; remove the unnecessary CERT

--- a/Dockerfile.i686.x86_64.linux
+++ b/Dockerfile.i686.x86_64.linux
@@ -30,9 +30,9 @@ ENV C_ARES_VER=1.15.0
 ENV OPENSSL_VER=1.1.1b
 ENV SQLITE_VER=3310100
 ENV LIBSSH2_VER=1.10.0
-ARG GMP_VER=6.2.1
-ARG NETTLE_VER=3.7.3
-ARG GNUTLS_VER=3.6.16
+ENV GMP_VER=6.2.1
+ENV NETTLE_VER=3.7.3
+ENV GNUTLS_VER=3.6.16
 ENV ARIA2_VER=1.35.0
 
 
