--- a/Dockerfile.i686.x86_64.linux
+++ b/Dockerfile.i686.x86_64.linux
@@ -125,7 +125,7 @@ RUN mkdir -p $PREFIX $PKG_CONFIG_PATH \
     && make -j `nproc` && make install \
 \
     && cd $SRC/openssl-$OPENSSL_VER/ \
-    && ./Configure $([[ "$HOST" =~ "mingw32" ]] && ([[ "$HOST" =~ "x86_64" ]] && echo "mingw64" || echo "mingw") || ([[ "$HOST" =~ "linux" ]] && ([[ "$HOST" =~ "x86_64" ]] && echo "linux-x86_64" || echo "linux-x86"))) --cross-compile-prefix= --prefix=$PREFIX no-shared no-tests \
+    && ./Configure $([[ "$HOST" =~ "mingw32" ]] && ([[ "$HOST" =~ "x86_64" ]] && echo "mingw64" || echo "mingw") || ([[ "$HOST" =~ "linux" ]] && ([[ "$HOST" =~ "x86_64" ]] && echo "linux-x86_64" || echo "linux-x86"))) --cross-compile-prefix= --prefix=$PREFIX --openssldir=/etc/ssl no-shared no-tests \
     && make -j `nproc` && make install \
 \
     && cd $SRC/sqlite-autoconf-$SQLITE_VER/ \
@@ -196,7 +196,7 @@ RUN	mkdir -p $PREFIX $PKG_CONFIG_PATH \
     && make -j `nproc` && make install \
 \
     && cd $SRC/openssl-$OPENSSL_VER/ \
-    && ./Configure $([[ "$HOST" =~ "mingw32" ]] && ([[ "$HOST" =~ "x86_64" ]] && echo "mingw64" || echo "mingw") || ([[ "$HOST" =~ "linux" ]] && ([[ "$HOST" =~ "x86_64" ]] && echo "linux-x86_64" || echo "linux-x86"))) --cross-compile-prefix= --prefix=$PREFIX no-shared no-tests \
+    && ./Configure $([[ "$HOST" =~ "mingw32" ]] && ([[ "$HOST" =~ "x86_64" ]] && echo "mingw64" || echo "mingw") || ([[ "$HOST" =~ "linux" ]] && ([[ "$HOST" =~ "x86_64" ]] && echo "linux-x86_64" || echo "linux-x86"))) --cross-compile-prefix= --prefix=$PREFIX --openssldir=/etc/ssl no-shared no-tests \
     && make -j `nproc` && make install \
 \
     && cd $SRC/sqlite-autoconf-$SQLITE_VER/ \
