Fix the PKG_CONFIG_PATH for 64-bit build

--- a/Dockerfile.i686.x86_64.linux
+++ b/Dockerfile.i686.x86_64.linux
@@ -201,7 +201,7 @@ ENV DLLTOOL "${MINGW32}dlltool ${DLLTOOL_FLAGS}"
 ARG BUILDROOT=/opt/linux
 ARG PREFIX=$BUILDROOT/aria2-$HOST-build
 
-ARG PKG_CONFIG_PATH=$PREFIX/lib/pkgconfig/
+ARG PKG_CONFIG_PATH="$PREFIX/lib/pkgconfig/:$PREFIX/lib64/pkgconfig/"
 
 ARG CPPFLAGS="${CPPFLAGS} -I${PREFIX}/include"
 ARG LDFLAGS="${LDFLAGS} -L${PREFIX}/lib"
