--- a/Dockerfile.i686.x86_64.mingw
+++ b/Dockerfile.i686.x86_64.mingw
@@ -182,7 +182,7 @@ ENV DLLTOOL "${MINGW32}dlltool ${DLLTOOL_FLAGS}"
 ARG MINGW32_SEARCH_PATH=/opt/mingw32
 ARG PREFIX=${MINGW32_SEARCH_PATH}/$HOST
 
-ARG PKG_CONFIG_PATH=${PREFIX}/lib/pkgconfig/
+ARG PKG_CONFIG_PATH="$PREFIX/lib/pkgconfig/:$PREFIX/lib64/pkgconfig/"
 
 ARG CPPFLAGS="${CPPFLAGS} -I${PREFIX}/include"
 ARG LDFLAGS="${LDFLAGS} -L${PREFIX}/lib"
